fix POC css on mobile

--- a/app/assets/stylesheets/homepage/_poc.scss
+++ b/app/assets/stylesheets/homepage/_poc.scss
@@ -19,14 +19,14 @@
     }
   }
 
-  &.tablet {
+  .tablet {
     @media(max-width: 767px) {
       display: none;
     }
     @media(min-width: $medium) {
       display: block;
     }
-    @media(max-width: 1023px) {
+    @media(min-width: 1023px) {
       display: none;
     }
   }
